Removed warning when testing using JDK 25+